# dpset

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  monitoritem.cpp  monitoritem.h  orientation.h  resources.qrc  version.h.in  xinputbackend.cpp  xinputbackend.h  xrandrbackend.cpp  xrandrbackend.h
.github/workflows/: build.yml
translations/: dpset_en.ts  dpset_nl.ts
